--- a/youtube/styles.css
+++ b/youtube/styles.css
@@ -3,13 +3,9 @@ p{
   margin-top: 0;
   margin-bottom: 0;
 }
-.video-preview{
-  display: inline-block;
-  vertical-align: top;
-  margin-right: 15px;
-}
+
 .img-1{
-  width: 300px;
+  width: 100%;
 }
 .search-input{
   display: block;
@@ -22,16 +18,9 @@ p{
   font-weight: 500;
   margin-bottom: 15px;
 }
-
-.channel-pic{
-  display: inline-block;
-  width: 50px;
-  vertical-align: top;
-
-}
-.video-real-info{
-display: inline-block;
-vertical-align: top;
+.video-info{
+  display: grid;
+  grid-template-columns: 50px 1fr;
 }
 
 .profile-pic{
@@ -47,4 +36,11 @@ vertical-align: top;
 }
 .video-stats{
   margin-top: 7px;
+}
+
+.video-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 10px;
+  row-gap: 5px;
 }
