--- a/youtube/styles/header.css
+++ b/youtube/styles/header.css
@@ -1,3 +1,21 @@
-.search-input{
-  display: block;
+.header{
+  height: 55px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.left-section{
+  background-color: blue;
+  width: 150px;
+}
+.right-section{
+  background-color: blueviolet;
+  width: 75px;
+}
+.middle-section{
+  background-color: pink;
+  flex:1;
+  margin-left: 35px;
+  margin-right: 70px;
+  max-width: 500px;
 }
