--- a/youtube/styles/video.css
+++ b/youtube/styles/video.css
@@ -1,39 +1,42 @@
-
-.img-1{
+.thumbnail {
   width: 100%;
 }
 
-.intro-para{
-  width: 200px;
-  line-height: 20px;
-  margin-top: 0px;
+.video-title {
+  margin-top: 0;
   font-size: 14px;
   font-weight: 500;
-  margin-bottom: 15px;
+  line-height: 20px;
+  margin-bottom: 12px;
 }
-.video-info{
+
+.video-info-grid {
   display: grid;
   grid-template-columns: 50px 1fr;
 }
 
-.profile-pic{
+.profile-picture {
   width: 40px;
-  border-radius: 80px;
-}
-.image{
-  margin-bottom: 7px;
-}
-.video-author,.video-stats{
-  font-size: 12px;
-  color: rgb(96,96,96);
-}
-.video-stats{
-  margin-top: 7px;
+  border-radius: 50px;
 }
 
-.video-container{
+.thumbnail-row {
+  margin-bottom: 12px;
+}
+
+.video-author,
+.video-stats {
+  font-size: 12px;
+  color: rgb(96, 96, 96);
+}
+
+.video-author {
+  margin-bottom: 4px;
+}
+
+.video-grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 10px;
-  row-gap: 5px;
+  column-gap: 16px;
+  row-gap: 40px;
 }
