--- a/youtube/styles/video.css
+++ b/youtube/styles/video.css
@@ -40,3 +40,20 @@
   column-gap: 16px;
   row-gap: 40px;
 }
+
+.thumbnail-row{
+  position: relative;
+}
+.time-stamp{
+  position: absolute;
+  right: 7px;
+  background-color: black;
+  bottom: 7px;
+  color: white;
+  font-weight: 500;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-bottom: 2px;
+  padding-top: 2px;
+  border-radius: 2px;
+}
